# openclaw

./: .gitignore  README.md  ecosystem.config.js  main.py  package-lock.json  package.json  pyproject.toml
.wwebjs_cache/: 2.3000.1035637479.html
data/: bankr-performance.json  bankr-research.json  bankr-tokens.json  clanker-performance.json  clanker-research.json  clanker-tokens.json  fresh-clanker-research.json  image-cache.json  indicator-weights.json  polymarket-journal.json  skill-tasks.json  social-content.json  social-trends.json  trade-journal.json
memory/: 0xwork-tasks.json
openclaw/: __init__.py  agent.py  cli.py
openclaw.egg-info/: PKG-INFO  SOURCES.txt
openclaw/tools/: __init__.py  calculator.py  file_read.py  file_write.py  shell.py  web_search.py
src/: index.js
src/adapters/: telegram.js  whatsapp.js
src/agents/: 0xwork-worker.js  bankr-launcher.js  btc-trader.js  btc-trader.v2.bak.js  clanker-launcher.js  ecommerce-agent.js  multi-asset-trader.js  polymarket-trader.js  skill-worker.js  social-content.js
src/bridge/: openclaw.js
src/memory/: 0xwork-tasks.json
src/scripts/: bayse-auth.js  bayse-discover.js  bayse-fix-sign.js  bayse-login.js  bayse-login2.js  bayse-sign-test.js  bayse-sign-v2.js  bayse-test-api.js  bayse-test-order.js  get-chat-id.js  research-fresh.js  research-fresh2.js  research-fresh3.js  research-fresh4.js  test-bankr-api.js  wa-pair.js
src/utils/: bayse-client.js  dns-fix.js  logger.js  token-image-gen.js
tests/: __init__.py  test_agent.py  test_calculator.py  test_file_tools.py  test_shell.py
